Mod Paul et Jim

--- a/trombinoscope.html
+++ b/trombinoscope.html
@@ -361,7 +361,7 @@ const initialPeople = [
 	{ prenom:'Aurélien', nom:'Bouton', surnom:"D'[Au]R", numero:'99-127', photo:'Trombinoscope/Aurélien_Bouton.jpg' , tél: "0769544188"},
 	{ prenom:'Raslene', nom:'Braiek', surnom:"a[B]i[MV]", numero:'7', photo:'Trombinoscope/Raslene_Braiek.jpg' , tél: "+216 25 717 793"},
 	{ prenom:'Aristide', nom:'Brasille', surnom:'Multiprix', numero:'136-169 Djellaba', photo:'Trombinoscope/Aristide_Brasille.jpg' , tél: "0762157690"},
-	{ prenom:'Jim', nom:'Brasseur', surnom:"Adémon[T][D]TTan's", numero:'13', photo:'Trombinoscope/Jim_Brasseur.jpg' , tél: "0750223058"},
+	{ prenom:'Jim', nom:'Brasseur', surnom:"Adeku[V]", numero:'13', photo:'Trombinoscope/Jim_Brasseur.jpg' , tél: "0750223058"},
 	{ prenom:'Gaspard', nom:'Bresch', surnom:'Si[A]te', numero:'9', photo:'Trombinoscope/Gaspard_Bresch.jpg' , tél: "0785933478"},
 	{ prenom:'Martin', nom:'Brillouet', surnom:"Big'oüdi", numero:'30-50', photo:'Trombinoscope/Nathan_Brioullet.jpg' , tél: "0782266854"},
 	{ prenom:'Florence', nom:'Brizion', surnom:'Médi[6]', numero:'19', photo:'Trombinoscope/Florence_Brizon.png' , tél: "0628840731"},
@@ -436,7 +436,7 @@ const initialPeople = [
 	{ prenom:'Tyfenn', nom:'Kiev', surnom:'n[n]', numero:'178-138', photo:'Trombinoscope/Tyfenn_Kiev.jpg' , tél: "0617689075"},
 	{ prenom:'Julie', nom:'Klein', surnom:'Mabawa', numero:'88-44', photo:'Trombinoscope/Old_Julie_Klein.jpg' , tél: "0626706074"},
 	{ prenom:'Andéol', nom:'Lallemand', surnom:'Kwalität', numero:'105♥-12', photo:'Trombinoscope/Andéol_Lallemand.jpg' , tél: "0652929481"},
-	{ prenom:'Paul', nom:'Landais', surnom:'Ladronᵀ', numero:'124-33', photo:'Trombinoscope/Paul_Landais.jpg' , tél: "0768465225"},
+	{ prenom:'Paul', nom:'Landais', surnom:'Track[&]', numero:'124-33', photo:'Trombinoscope/Paul_Landais.jpg' , tél: "0768465225"},
 	{ prenom:'Jean-Eudes', nom:'Lantz', surnom:'Vi[J]', numero:'1', photo:'Trombinoscope/Jean-Eudès_Lantz.jpg' , tél: "0615998530"},
 	{ prenom:'Thibault', nom:'Le Baron', surnom:'Roüge', numero:'60-70', photo:'Trombinoscope/Thibault_Le Baron.jpg' , tél: "0611316295"},
 	{ prenom:'Marie', nom:'de Château-Thierry', surnom:'Ti-grrr[S]', numero:'117', photo:'Trombinoscope/Marie_Le-Bout-De-Chateau-Thierry-De-Beaumanoir.jpg' , tél: "0749901550"},
@@ -984,6 +984,7 @@ window.addEventListener("load", function () {
 
 </body>
 </html>
+
 
 
 
