--- a/jeu.html
+++ b/jeu.html
@@ -463,7 +463,7 @@ const initialPeople = [
 	{ prenom:'Aurélien', nom:'Bouton', surnom:"D'[Au]R", numero:'99-127', photo:'Trombinoscope/Aurélien_Bouton.jpg' },
 	{ prenom:'Raslene', nom:'Braiek', surnom:"a[B]i[MV]", numero:'7', photo:'Trombinoscope/Raslene_Braiek.jpg' },
 	{ prenom:'Aristide', nom:'Brasille', surnom:'Multiprix', numero:'136-169 Djellaba', photo:'Trombinoscope/Aristide_Brasille.jpg' },
-	{ prenom:'Jim', nom:'Brasseur', surnom:"Adémon[T][D]TTan's", numero:'13', photo:'Trombinoscope/Jim_Brasseur.jpg' },
+	{ prenom:'Jim', nom:'Brasseur', surnom:"Adeku[V]", numero:'13', photo:'Trombinoscope/Jim_Brasseur.jpg' },
 	{ prenom:'Gaspard', nom:'Bresch', surnom:'Si[A]te', numero:'9', photo:'Trombinoscope/Gaspard_Bresch.jpg' },
 	{ prenom:'Martin', nom:'Brillouet', surnom:"Big'oüdi", numero:'30-50', photo:'Trombinoscope/Nathan_Brioullet.jpg' },
 	{ prenom:'Florence', nom:'Brizion', surnom:'Médi[6]', numero:'19', photo:'Trombinoscope/Florence_Brizon.png' },
@@ -538,7 +538,7 @@ const initialPeople = [
 	{ prenom:'Tyfenn', nom:'Kiev', surnom:'n[n]', numero:'178-138', photo:'Trombinoscope/Tyfenn_Kiev.jpg' },
 	{ prenom:'Julie', nom:'Klein', surnom:'Mabawa', numero:'88-44', photo:'Trombinoscope/Old_Julie_Klein.jpg' },
 	{ prenom:'Andéol', nom:'Lallemand', surnom:'Kwalität', numero:'105♥-12', photo:'Trombinoscope/Andéol_Lallemand.jpg' },
-	{ prenom:'Paul', nom:'Landais', surnom:'Ladron^t', numero:'124-33', photo:'Trombinoscope/Paul_Landais.jpg' },
+	{ prenom:'Paul', nom:'Landais', surnom:'Track[&]', numero:'124-33', photo:'Trombinoscope/Paul_Landais.jpg' },
 	{ prenom:'Jean-Eudes', nom:'Lantz', surnom:'Vi[J]', numero:'1', photo:'Trombinoscope/Jean-Eudès_Lantz.jpg' },
 	{ prenom:'Thibault', nom:'Le Baron', surnom:'Roüge', numero:'60-70', photo:'Trombinoscope/Thibault_Le Baron.jpg' },
 	{ prenom:'Marie', nom:'de Château-Thierry', surnom:'Ti-grrr[S]', numero:'117', photo:'Trombinoscope/Marie_Le-Bout-De-Chateau-Thierry-De-Beaumanoir.jpg' },
@@ -1028,6 +1028,7 @@ window.addEventListener("DOMContentLoaded", () => {
 
 </body>
 </html>
+
 
 
 
