--- a/monomes.html
+++ b/monomes.html
@@ -417,7 +417,7 @@ D’Archis qui ont vingt ans.
 
 	{
         id: 'm5',
-        title: "Monôme de Siber's (gnassé par Samoal i7, bientôt à N !)",
+        title: "Monôme de Siber's",
         tags: ['texte','audio'],
         audio: 'audio/monome5.mp3',
         lyrics: `Dans le froid du grand nord d'la Lorraine 
@@ -455,6 +455,14 @@ Voici l'heure de se paill'ser un peu
 Voici l'heure de l'aper's
 On le servira , on le quillonera
 En chantant le monôme de Siber's.`
+      }
+
+		{
+        id: 'm6',
+        title: "Le Grand Bastringue",
+        tags: ['texte','audio'],
+        audio: 'audio/monome6.mp3',
+        lyrics: `Pas de paroles actuellement...`
       }
     ];
 
@@ -657,6 +665,7 @@ speedEl.value = 1;
 
 </body>
 </html>
+
 
 
 
