Update Le grand Bastingrue

--- a/monomes.html
+++ b/monomes.html
@@ -462,7 +462,39 @@ En chantant le monôme de Siber's.`
         title: "Le Grand Bastringue",
         tags: ['texte','audio'],
         audio: 'audio/monome6.mp3',
-        lyrics: `Pas de paroles actuellement...`
+        lyrics: `
+On a souvent parlé de la belle vie
+Que les Gadzarts mènent au Tabagnon
+Tous les pékins du pays nous envient
+Et voudraient bien que nous les invitions
+Mais moi, je vous dis, ce n'est pas toujours la bringue
+II nous arrive de travailler à fond
+	Car c'est le travail qui fait marcher le Bastringue 
+	Le Grand Bastringue de la Boquette d'Angers
+
+C'était hier, lundi lendemain de fête
+Tous les Gadzarts dormaient dans leurs paddocks De d'sous les draps émergeaient quelques têtes Seuls les ratons se baladaient dans les dort's
+Mais v'là t'y pas que le Luigi se ramène
+Fainéants qu'il dit, c'est plus I'moment de dormir
+	Debout, c'est l'heure de commencer le Bastringue 
+	Le Grand Bastringue de la Boquette d'Angers
+
+Le soir au pieut's afin de se distraire
+Chacun de nous avant de s'endormir
+Ecoute le poste qui du bout de la terre
+Nous envoie les échos, leurs soupirs
+Mais un beau soir, Luigi un peu bringzingué
+Prit tous les postes, aidé du baise à fond
+	Ce soir c'est l'heure de terminer le Bastringue
+	Le Grand Bastringue de la Boquette d'Angers
+
+Y avait Luigi, ce dompteur indomptable
+Ce poisson chat, sacqueur de Traditions
+Ils sont venus, haïsseurs incurables
+Nous imposer en sec's leurs conditions
+Pauvres Gadzarts, c'est toujours toi qui trinques Pour ton Zacul's, avec toi nous craignons
+	C'est pourtant toi qui fais marcher le Bastringue
+	Le Grand Bastringue de la Boquette d'Angers`
       }
     ];
 
@@ -665,6 +697,7 @@ speedEl.value = 1;
 
 </body>
 </html>
+
 
 
 
