Update Monome de Siber's

--- a/monomes.html
+++ b/monomes.html
@@ -473,7 +473,9 @@ II nous arrive de travailler à fond
 	Le Grand Bastringue de la Boquette d'Angers
 
 C'était hier, lundi lendemain de fête
-Tous les Gadzarts dormaient dans leurs paddocks De d'sous les draps émergeaient quelques têtes Seuls les ratons se baladaient dans les dort's
+Tous les Gadzarts dormaient dans leurs paddocks 
+De d'sous les draps émergeaient quelques têtes 
+Seuls les ratons se baladaient dans les dort's
 Mais v'là t'y pas que le Luigi se ramène
 Fainéants qu'il dit, c'est plus I'moment de dormir
 	Debout, c'est l'heure de commencer le Bastringue 
@@ -492,7 +494,8 @@ Y avait Luigi, ce dompteur indomptable
 Ce poisson chat, sacqueur de Traditions
 Ils sont venus, haïsseurs incurables
 Nous imposer en sec's leurs conditions
-Pauvres Gadzarts, c'est toujours toi qui trinques Pour ton Zacul's, avec toi nous craignons
+Pauvres Gadzarts, c'est toujours toi qui trinques 
+Pour ton Zacul's, avec toi nous craignons
 	C'est pourtant toi qui fais marcher le Bastringue
 	Le Grand Bastringue de la Boquette d'Angers`
       }
@@ -697,6 +700,7 @@ speedEl.value = 1;
 
 </body>
 </html>
+
 
 
 
