--- a/trombinoscope.html
+++ b/trombinoscope.html
@@ -356,7 +356,7 @@ const initialPeople = [
 	{ prenom:'Noah', nom:'Blandin', surnom:"Toler's", numero:'133-125', photo:'Trombinoscope/Noah_Blandin.jpg' , tél: "0636151954"},
 	{ prenom:'Maxence', nom:'Bordin', surnom:'Pr[&]ci pisse', numero:'258~(125)^0~(133)^0', photo:'Trombinoscope/Maxence_Bordin.jpg' , tél: "0770095373"},
 	{ prenom:'Baptiste', nom:'Bourdin', surnom:'Kamikaze', numero:'134', photo:'Trombinoscope/Baptiste_Bourdin.jpg' , tél: "0768825717"},
-	{ prenom:'Victor', nom:'Bourdin', surnom:'??', numero:'??', photo:'Trombinoscope/Victor_Bourdin.jpg' , tél: "0755610514"},
+	{ prenom:'Victor', nom:'Bourdin', surnom:'Giga', numero:'83-504i', photo:'Trombinoscope/Victor_Bourdin.jpg' , tél: "0755610514"},
 	{ prenom:'Thomas', nom:'Bourdon', surnom:'Vespula', numero:'84', photo:'Trombinoscope/Thomas_Bourdon.png' , tél: "0631495722"},
 	{ prenom:'Aurélien', nom:'Bouton', surnom:"D'[Au]R", numero:'99-127', photo:'Trombinoscope/Aurélien_Bouton.jpg' , tél: "0769544188"},
 	{ prenom:'Raslene', nom:'Braiek', surnom:"a[B]i[MV]", numero:'7', photo:'Trombinoscope/Raslene_Braiek.jpg' , tél: "+216 25 717 793"},
@@ -464,7 +464,7 @@ const initialPeople = [
 	{ prenom:'Basile', nom:'Martin', surnom:'Barbalcoolic[E]', numero:'126-143-110-165', photo:'Trombinoscope/Basile_Martin.jpg' , tél: "0781841813"},
 	{ prenom:'Côme', nom:'Maunier', surnom:'Avi', numero:'11-18-154', photo:'Trombinoscope/Côme_Maunier.jpg' , tél: "0666136466"},
 	{ prenom:'Gabriel', nom:'Méritet', surnom:'Tula', numero:'128-129-59♥', photo:'Trombinoscope/Gabriel_Méritet.jpg' , tél: "0676381193"},
-	{ prenom:'Paul', nom:'Métivier', surnom:'[n]Dou!?', numero:'146', photo:'Trombinoscope/Paul_Metivier.jpg' , tél: "0769477827"},
+	{ prenom:'Paul', nom:'Métivier', surnom:'[N]Doo', numero:'146', photo:'Trombinoscope/Paul_Metivier.jpg' , tél: "0769477827"},
 	{ prenom:'Jean', nom:'Mijonnet', surnom:'Glij', numero:'170-71', photo:'Trombinoscope/Jean_Mijonnet.png' , tél: "0601811413"},
 	{ prenom:'Lucian', nom:'Millerioux', surnom:'Zaagermeister', numero:'131', photo:'Trombinoscope/Lucian_Millerioux.jpg' , tél: "0684340286"},
 	{ prenom:'Baptiste', nom:'Monnier', surnom:"Kho'pate", numero:'73-16', photo:'Trombinoscope/Baptiste_Monnier.jpg' , tél: "0659039049"},
@@ -502,7 +502,7 @@ const initialPeople = [
 	{ prenom:'Lucas', nom:'Teixeira', surnom:"Trakina[H]", numero:'50-30', photo:'Trombinoscope/Lucas_Teixeira.jpg' , tél: "+55 21 99827-5212"},
 	{ prenom:'Jules', nom:'Tesson', surnom:'[T]ston', numero:'37-20 (58)°', photo:'Trombinoscope/Jules_Tesson.jpg' , tél: "0651129272"},
 	{ prenom:'Marie-Luce', nom:'Teysseyre', surnom:'6[ρ]', numero:'31-115', photo:'Trombinoscope/Marie-Luce_Teysseyre.jpg' , tél: "0769143850"},
-	{ prenom:'Mathieu', nom:'Thérond', surnom:'Carrey', numero:'56~53 block', photo:'Trombinoscope/Mathieu_Thérond.jpg' , tél: "0768033393"},
+	{ prenom:'Mathieu', nom:'Thérond', surnom:'Nys[Au]', numero:'56~53 block', photo:'Trombinoscope/Mathieu_Thérond.jpg' , tél: "0768033393"},
 	{ prenom:'Etienne', nom:'Touleau', surnom:'Toüsl[é]', numero:'20-37-(58)°', photo:'Trombinoscope/Etienne_Touleau.jpg' , tél: "0668282279"},
 	{ prenom:'Victor', nom:'Valadié', surnom:'Tator', numero:'91', photo:'Trombinoscope/Victor_Valadié.jpg' , tél: "0787374275"},
 	{ prenom:'Judith', nom:'Vallin', surnom:'Sanaa', numero:'86 76 108', photo:'Trombinoscope/Judith_Vallin.jpg' , tél: "0611764117"},
@@ -510,7 +510,7 @@ const initialPeople = [
 	{ prenom:'Hugo', nom:'Verdie-Maucort', surnom:'Trip[O]xx', numero:'40', photo:'Trombinoscope/Hugo_Verdie-Maucort.jpg' , tél: "0769005759"},
 	{ prenom:'Lilian', nom:'Verrier', surnom:'Vidlô', numero:'44-88', photo:'Trombinoscope/Lilian_Verrier.jpg' , tél: "0627621328"},
 	{ prenom:'Louis', nom:'Videux', surnom:'[T]rium', numero:'190-95♥', photo:'Trombinoscope/Louis_Videux.jpg' , tél: "0788062616"},
-	{ prenom:'Oscar', nom:'Villemer', surnom:'[O]dia 4', numero:'51-55', photo:'Trombinoscope/Oscar_Villemer.jpg' , tél: "0782512770"},
+	{ prenom:'Oscar', nom:'Villemer', surnom:'[O]dia', numero:'4-51-55', photo:'Trombinoscope/Oscar_Villemer.jpg' , tél: "0782512770"},
 	{ prenom:'Oscar', nom:'Wambergue', surnom:'Gamb[R]ge', numero:'94-5-5²', photo:'Trombinoscope/Oscar_Wambergue.jpg' , tél: "0669161061"},
 	{ prenom:'Yann', nom:'Zannier', surnom:'Apa', numero:'33-124', photo:'Trombinoscope/Yann_Zannier.jpg' , tél: "0768650642"},
   ];
@@ -984,6 +984,7 @@ window.addEventListener("load", function () {
 
 </body>
 </html>
+
 
 
 
