--- a/jeu.html
+++ b/jeu.html
@@ -458,7 +458,7 @@ const initialPeople = [
 	{ prenom:'Noah', nom:'Blandin', surnom:"Toler's", numero:'133-125', photo:'Trombinoscope/Noah_Blandin.jpg' },
 	{ prenom:'Maxence', nom:'Bordin', surnom:'Pr[&]ci pisse', numero:'258~(125)^0~(133)^0', photo:'Trombinoscope/Maxence_Bordin.jpg' },
 	{ prenom:'Baptiste', nom:'Bourdin', surnom:'Kamikaze', numero:'134', photo:'Trombinoscope/Baptiste_Bourdin.jpg' , tél: ""},
-	{ prenom:'Victor', nom:'Bourdin', surnom:'??', numero:'??', photo:'Trombinoscope/Victor_Bourdin.jpg' },
+	{ prenom:'Victor', nom:'Bourdin', surnom:'Giga', numero:'83-504i', photo:'Trombinoscope/Victor_Bourdin.jpg' },
 	{ prenom:'Thomas', nom:'Bourdon', surnom:'Vespula', numero:'84', photo:'Trombinoscope/Thomas_Bourdon.png' },
 	{ prenom:'Aurélien', nom:'Bouton', surnom:"D'[Au]R", numero:'99-127', photo:'Trombinoscope/Aurélien_Bouton.jpg' },
 	{ prenom:'Raslene', nom:'Braiek', surnom:"a[B]i[MV]", numero:'7', photo:'Trombinoscope/Raslene_Braiek.jpg' },
@@ -566,7 +566,7 @@ const initialPeople = [
 	{ prenom:'Basile', nom:'Martin', surnom:'Barbalcoolic[E]', numero:'126-143-110-165', photo:'Trombinoscope/Basile_Martin.jpg' },
 	{ prenom:'Côme', nom:'Maunier', surnom:'Avi', numero:'11-18-154', photo:'Trombinoscope/Côme_Maunier.jpg' },
 	{ prenom:'Gabriel', nom:'Méritet', surnom:'Tula', numero:'128-129-59♥', photo:'Trombinoscope/Gabriel_Méritet.jpg' },
-	{ prenom:'Paul', nom:'Métivier', surnom:'[n]Dou!?', numero:'146', photo:'Trombinoscope/Paul_Metivier.jpg' },
+	{ prenom:'Paul', nom:'Métivier', surnom:'[N]Doo', numero:'146', photo:'Trombinoscope/Paul_Metivier.jpg' },
 	{ prenom:'Jean', nom:'Mijonnet', surnom:'Glij', numero:'170-71', photo:'Trombinoscope/Jean_Mijonnet.png' },
 	{ prenom:'Lucian', nom:'Millerioux', surnom:'Zaagermeister', numero:'131', photo:'Trombinoscope/Lucian_Millerioux.jpg' },
 	{ prenom:'Baptiste', nom:'Monnier', surnom:"Kho'pate", numero:'73-16', photo:'Trombinoscope/Baptiste_Monnier.jpg' },
@@ -604,7 +604,7 @@ const initialPeople = [
 	{ prenom:'Lucas', nom:'Teixeira', surnom:"Trakina[H]", numero:'50-30', photo:'Trombinoscope/Lucas_Teixeira.jpg' },
 	{ prenom:'Jules', nom:'Tesson', surnom:'[T]ston', numero:'37-20 (58)°', photo:'Trombinoscope/Jules_Tesson.jpg' },
 	{ prenom:'Marie-Luce', nom:'Teysseyre', surnom:'6[ρ]', numero:'31-115', photo:'Trombinoscope/Marie-Luce_Teysseyre.jpg' },
-	{ prenom:'Mathieu', nom:'Thérond', surnom:'Carrey', numero:'56~53 block', photo:'Trombinoscope/Mathieu_Thérond.jpg' },
+	{ prenom:'Mathieu', nom:'Thérond', surnom:'Nys[Au]', numero:'56~53 block', photo:'Trombinoscope/Mathieu_Thérond.jpg' },
 	{ prenom:'Etienne', nom:'Touleau', surnom:'Toüsl[é]', numero:'20-37-(58)°', photo:'Trombinoscope/Etienne_Touleau.jpg' },
 	{ prenom:'Victor', nom:'Valadié', surnom:'Tator', numero:'91', photo:'Trombinoscope/Victor_Valadié.jpg' },
 	{ prenom:'Judith', nom:'Vallin', surnom:'Sanaa', numero:'86 76 108', photo:'Trombinoscope/Judith_Vallin.jpg' },
@@ -612,7 +612,7 @@ const initialPeople = [
 	{ prenom:'Hugo', nom:'Verdie-Maucort', surnom:'Trip[O]xx', numero:'40', photo:'Trombinoscope/Hugo_Verdie-Maucort.jpg' },
 	{ prenom:'Lilian', nom:'Verrier', surnom:'Vidlô', numero:'44-88', photo:'Trombinoscope/Lilian_Verrier.jpg' },
 	{ prenom:'Louis', nom:'Videux', surnom:'[T]rium', numero:'190-95♥', photo:'Trombinoscope/Louis_Videux.jpg' },
-	{ prenom:'Oscar', nom:'Villemer', surnom:'[O]dia 4', numero:'51-55', photo:'Trombinoscope/Oscar_Villemer.jpg' },
+	{ prenom:'Oscar', nom:'Villemer', surnom:'[O]dia', numero:'4-51-55', photo:'Trombinoscope/Oscar_Villemer.jpg' },
 	{ prenom:'Oscar', nom:'Wambergue', surnom:'Gamb[R]ge', numero:'94-5-5²', photo:'Trombinoscope/Oscar_Wambergue.jpg' },
 	{ prenom:'Yann', nom:'Zannier', surnom:'Apa', numero:'33-124', photo:'Trombinoscope/Yann_Zannier.jpg' },
   ];
@@ -1028,6 +1028,7 @@ window.addEventListener("DOMContentLoaded", () => {
 
 </body>
 </html>
+
 
 
 
