Ajout bhéta et rho

--- a/jeu.html
+++ b/jeu.html
@@ -306,6 +306,8 @@
         <span onclick="insertCharTo('guess','ᵀ')">ᵀ</span>
 		<span onclick="insertCharTo('guess','∇')">∇</span>
 		<span onclick="insertCharTo('guess','∫')">∫</span>
+		<span onclick="insertCharTo('guess','ρ')">ρ</span>
+		<span onclick="insertCharTo('guess','β')">β</span>
       </div>
       <button onclick="checkGuess()">Valider</button>
       <button onclick="skip()">Skip (-0.5 vie)</button>
@@ -1028,6 +1030,7 @@ window.addEventListener("DOMContentLoaded", () => {
 
 </body>
 </html>
+
 
 
 
