--- a/trombinoscope.html
+++ b/trombinoscope.html
@@ -420,11 +420,11 @@ const initialPeople = [
 	{ prenom:'Alexis', nom:'Grould', surnom:'[π]R', numero:'39', photo:'Trombinoscope/Alexis_Grould.jpg' , tél: "0621345807"},
 	{ prenom:'Baptiste', nom:'Guemas', surnom:'[1]´s tiK', numero:'151', photo:'Trombinoscope/Baptiste_Guemas.jpg' , tél: "0781376954"},
 	//{ prenom:'Flavien', nom:'Guerrier-Hay', surnom:"??", numero:'??', photo:'Trombinoscope/Flavien_Guerrier-Hay.jpg' , tél: ""},
-	{ prenom:'Aurélien', nom:'Guieu', surnom:'Abaddon', numero:'18-154~(11)^0', photo:'Trombinoscope/Aurélien_Guieu.jpg' , tél: "0632068238"},
+	{ prenom:'Aurélien', nom:'Guieu', surnom:'Abadone', numero:'18-154~(11)^0', photo:'Trombinoscope/Aurélien_Guieu.jpg' , tél: "0632068238"},
 	{ prenom:'Hermès', nom:'Guilbert', surnom:'Bodycount', numero:'148-22', photo:'Trombinoscope/Hermès_Guilbert.jpg' , tél: "0769920119"},
 	{ prenom:'Eliot', nom:'Guitton', surnom:'iiist', numero:'111', photo:'Trombinoscope/Eliot_Guitton.jpg' , tél: "0614317762"},
 	{ prenom:'Ali', nom:'Hassny', surnom:'⁠[e^x]pre’∫', numero:'⁠92-160-116', photo:'Trombinoscope/Ali_Hassny.jpg' , tél: "0748770388"},
-	{ prenom:'Louis', nom:'Hazard', surnom:'viensbriserlacharte dansma', numero:'106-113', photo:'Trombinoscope/Louis_Hazard.jpg' , tél: "0601297168"},
+	{ prenom:'Louis', nom:'Hazard', surnom:'madlon', numero:'106-113', photo:'Trombinoscope/Louis_Hazard.jpg' , tél: "0601297168"},
 	{ prenom:'Lilian', nom:'Hintzy', surnom:'Poket', numero:'51-4-55', photo:'Trombinoscope/Lilian_Hintzy.jpg' , tél: "0637674973"},
 	{ prenom:'Mathias', nom:'Houari-Zaniroli', surnom:'Kéfué', numero:'152', photo:'Trombinoscope/Mathias_Houari-Zaniroli.jpg' , tél: "0780406875"},
 	{ prenom:'Arthur', nom:'Houëix', surnom:'[β]mèche', numero:'102P-38', photo:'Trombinoscope/Arthur_Houëix.jpg' , tél: "0643892049"},
@@ -984,6 +984,7 @@ window.addEventListener("load", function () {
 
 </body>
 </html>
+
 
 
 
