--- a/jeu.html
+++ b/jeu.html
@@ -495,7 +495,7 @@ const initialPeople = [
 	{ prenom:'Wandrille', nom:'de Montfort', surnom:'Khlys', numero:'157', photo:'Trombinoscope/Wandrille_De Montfort.jpg' },
 	//{ prenom:'Arthur', nom:'de Oliveira Lopes', surnom:'??', numero:'??', photo:'Trombinoscope/Arthur_De Oliveira Lopes.jpg' },
 	{ prenom:'Jean-Denis', nom:'de Robillard', surnom:'Strike', numero:'911', photo:'Trombinoscope/Jean-denis.jpg' },
-	{ prenom:'Baptiste', nom:'Desmars', surnom:'L[A][B][K]ne', numero:'1582', photo:'Trombinoscope/Baptiste_Desmars.jpg' },
+	{ prenom:'Baptiste', nom:'Desmars', surnom:'L[A][B][K]ne', numero:'15-82', photo:'Trombinoscope/Baptiste_Desmars.jpg' },
 	{ prenom:'Malo', nom:'Dessard', surnom:'seg[a]', numero:'144', photo:'Trombinoscope/Malo_Dessard.jpg' },
 	{ prenom:'Philippe', nom:'Drouineau', surnom:'A[τ]s', numero:'135', photo:'Trombinoscope/Philippe_Drouineau.jpg' , tél: "0767375156"},
 	{ prenom:'Clément', nom:'Ducy', surnom:'Flard', numero:'127-99', photo:'Trombinoscope/Clément_Ducy.jpg' },
@@ -524,11 +524,11 @@ const initialPeople = [
 	{ prenom:'Alexis', nom:'Grould', surnom:'[π]R', numero:'39', photo:'Trombinoscope/Alexis_Grould.jpg' },
 	{ prenom:'Baptiste', nom:'Guemas', surnom:'[1]´s tiK', numero:'151', photo:'Trombinoscope/Baptiste_Guemas.jpg' },
 	//{ prenom:'Flavien', nom:'Guerrier-Hay', surnom:"??", numero:'??', photo:'Trombinoscope/Flavien_Guerrier-Hay.jpg' },
-	{ prenom:'Aurélien', nom:'Guieu', surnom:'Abaddon', numero:'18-154~(11)^0', photo:'Trombinoscope/Aurélien_Guieu.jpg' },
+	{ prenom:'Aurélien', nom:'Guieu', surnom:'Abadone', numero:'18-154~(11)^0', photo:'Trombinoscope/Aurélien_Guieu.jpg' },
 	{ prenom:'Hermès', nom:'Guilbert', surnom:'Bodycount', numero:'148-22', photo:'Trombinoscope/Hermès_Guilbert.jpg' },
 	{ prenom:'Eliot', nom:'Guitton', surnom:'iiist', numero:'111', photo:'Trombinoscope/Eliot_Guitton.jpg' },
 	{ prenom:'Ali', nom:'Hassny', surnom:'⁠[e^x]pre’∫', numero:'⁠92-160-116', photo:'Trombinoscope/Ali_Hassny.jpg' },
-	{ prenom:'Louis', nom:'Hazard', surnom:'viensbriserlacharte dansma', numero:'106-113', photo:'Trombinoscope/Louis_Hazard.jpg' , tél: ""},
+	{ prenom:'Louis', nom:'Hazard', surnom:'Madlon', numero:'106-113', photo:'Trombinoscope/Louis_Hazard.jpg' , tél: ""},
 	{ prenom:'Lilian', nom:'Hintzy', surnom:'Poket', numero:'51-4-55', photo:'Trombinoscope/Lilian_Hintzy.jpg' },
 	{ prenom:'Mathias', nom:'Houari-Zaniroli', surnom:'Kéfué', numero:'152', photo:'Trombinoscope/Mathias_Houari-Zaniroli.jpg' },
 	{ prenom:'Arthur', nom:'Houëix', surnom:'[β]mèche', numero:'102P-38', photo:'Trombinoscope/Arthur_Houëix.jpg' },
@@ -1030,6 +1030,7 @@ window.addEventListener("DOMContentLoaded", () => {
 
 </body>
 </html>
+
 
 
 
